--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -3,14 +3,13 @@
         <mat-card-title>New Event</mat-card-title>
     </mat-card-header>
     <div fxLayout='row'>
-        <mat-form-field fxFlex="45%">
+        <mat-form-field fxFlex="55%">
             <mat-label>Choose a date</mat-label>
             <input matInput [min]="minDate" [matDatepicker]="picker">
             <mat-hint>MM/DD/YYYY</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
-        <span fxFlex="10%"></span>
         <mat-form-field fxFlex="45%">
             <input type="time" matInput placeholder="Start Time" [ngModel]="eventTime" name="startTime"
                 (ngModelChange)="updateEventTime($event)">
@@ -18,11 +17,13 @@
     </div>
     <mat-form-field>
         <mat-label>Title</mat-label>
-        <input matInput name="eventTitle">
+        <input matInput name="eventTitle" [ngModel]="(teamEvent | async)?.title"
+            (ngModelChange)="teamEventDoc?.update({title: $event})">
     </mat-form-field>
     <mat-form-field>
         <mat-label>Description</mat-label>
-        <textarea matInput name="eventDescription"></textarea>
+        <textarea matInput name="eventDescription" [ngModel]="(teamEvent | async)?.description"
+            (ngModelChange)="teamEventDoc?.update({description: $event})"></textarea>
     </mat-form-field>
 
     <mat-card-actions>
