--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
 
 <mat-nav-list>
     <a mat-list-item [routerLink]="['/event', teamEvent.id]" *ngFor="let teamEvent of teamEvents">
-        <img matListItemAvatar [src]="teamEvent.icon">
+        <img matListItemAvatar [src]="teamEvent.icon" referrerpolicy="no-referrer">
         <h3 matListItemTitle>{{teamEvent.title}}</h3>
         <p matListItemLine>
             {{teamEventDateTime(teamEvent.dateTime) | date:'fullDate'}} at
