copy invite to clipboard

--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -31,7 +31,7 @@
         <button mat-raised-button color="primary" (click)="joinEvent()">
             JOIN
         </button>
-        <button mat-raised-button>
+        <button mat-raised-button (click)="copyEventInvite()">
             COPY INVITE
         </button>
         <button mat-raised-button color="warn" (click)="deleteEvent()">
