--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -36,7 +36,7 @@
     </mat-card-content>
     <mat-card-actions>
         <button mat-raised-button color="primary" (click)="joinEvent()">
-            JOIN
+            {{isJoined ? "LEAVE" : "JOIN"}}
         </button>
         <div *ngIf="isOwner">
             <button mat-raised-button (click)="copyEventInvite()">
