--- a/src/app/event-participants/event-participants.component.html
+++ b/src/app/event-participants/event-participants.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
 <mat-list>
     <mat-list-item *ngFor="let participant of participants | async">
         <img matListItemAvatar [src]="participant.photoURL" referrerpolicy="no-referrer">
