--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -50,4 +50,11 @@
     </mat-card-actions>
 </mat-card>
 
-<app-event-participants [eventId]="eventId"></app-event-participants>
+<mat-tab-group>
+    <mat-tab label="Participants">
+        <app-event-participants [eventId]="eventId"></app-event-participants>
+    </mat-tab>
+    <mat-tab label="Messages">
+        <app-messages [eventId]="eventId"></app-messages>
+    </mat-tab>
+</mat-tab-group>
