--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -12,9 +12,16 @@
     </mat-card-actions>
 </mat-card>
 
-<mat-list>
-    <mat-list-item *ngFor="let message of messages | async">
-        <img matListItemAvatar [src]="message.photoURL" referrerpolicy="no-referrer">
-        <p><strong>{{message.displayName}}</strong> {{message.text}} </p>
-    </mat-list-item>
-</mat-list>
+<mat-card *ngFor="let message of messages | async">
+    <mat-card-header>
+        <img mat-card-avatar [src]="message.photoURL" referrerpolicy="no-referrer">
+        <mat-card-title>{{message.displayName}}</mat-card-title>
+        <mat-card-subtitle>
+            {{messageDateTime(message.ts) | date:'fullDate'}} at
+            {{messageDateTime(message.ts) | date:'shortTime'}}
+        </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        <p>{{message.text}}</p>
+    </mat-card-content>
+</mat-card>
