--- a/src/app/event-participants/event-participants.component.html
+++ b/src/app/event-participants/event-participants.component.html
@@ -1,7 +1,8 @@
 <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
 <mat-list>
     <mat-list-item *ngFor="let participant of participants | async">
-        <img matListItemAvatar [src]="participant.photoURL" referrerpolicy="no-referrer">
+        <img matListItemAvatar [src]="participant.photoURL" referrerpolicy="no-referrer"
+            [alt]="participant.displayName">
         <h3 matListItemTitle>{{participant.displayName}}</h3>
     </mat-list-item>
 </mat-list>
