--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -69,10 +69,18 @@
 </mat-card>
 
 <mat-tab-group>
-    <mat-tab label="Participants">
+    <mat-tab>
+        <ng-template mat-tab-label>
+            <mat-icon class="mat-tab-icon">groups</mat-icon>
+            Participants
+        </ng-template>
         <app-event-participants [eventId]="eventId"></app-event-participants>
     </mat-tab>
     <mat-tab label="Messages">
+        <ng-template mat-tab-label>
+            <mat-icon class="mat-tab-icon">forum</mat-icon>
+            Messages
+        </ng-template>
         <app-messages [eventId]="eventId"></app-messages>
     </mat-tab>
 </mat-tab-group>
