event fee - create test stripe account

--- a/src/app/stripe-payment/stripe-payment.component.html
+++ b/src/app/stripe-payment/stripe-payment.component.html
@@ -2,3 +2,9 @@
 <button mat-raised-button color="primary" (click)="testFunction()">
     TEST
 </button>
+<button mat-raised-button (click)="createStripeConnectedAccount()">
+    Create Account
+</button>
+<button mat-raised-button (click)="deleteStripeTestConnectedAccount()">
+    Delete Account
+</button>
