prefill business profile url for  stripe account

--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -91,6 +91,10 @@
                         <mat-icon inline=true>account_balance</mat-icon>
                         Create Stripe Account
                     </button>
+                    <!-- <button mat-raised-button (click)="getStripeConnectedAccount('acct_1Mpfc4E73Omfilj5')">
+                        <mat-icon inline=true>account_balance</mat-icon>
+                        Get Stripe Account
+                    </button> -->
                 </div>
             </div>
         </div>
